2005-01-21 Mikhail Khodjaiants
	Partial fix for bug 83465: Add "Run to line" and "Resume at line" actions to the context menu of Disassembly view.
	* ResumeAtLineActionDelegate.java
	* DisassemblyView.java
	* plugin.xml

2005-01-21 Mikhail Khodjaiants
	Fix for bug 83437: Loading symbols should be run in the background.
	* ActionMessages.properties
	* LoadSymbolsActionDelegate.java
	* LoadSymbolsForAllActionDelegate.java

2005-01-20 Mikhail Khodjaiants
	Fix for bug 83412: Run to line and resume at line should run in the background.
	* ResumeAtLineAdapter.java
	* RunToLineAdapter.java
	* ActionMessages.properties

2005-01-20 Mikhail Khodjaiants
	Bug 83330: Inconsistent in the label for Add expression.
	* plugin.properties

2005-01-19 Mikhail Khodjaiants
	Fix for bug 83051: Add global variables deletes existing ones when new added.
	* AddGlobalsActionDelegate.java

2005-01-18 Mikhail Khodjaiants
	Fix for bug 82800: Make "Resume At Line" action retargettable.
	* plugin.xml
	* CDebugImages.java
	* EvaluationContextManager.java: new
	* ActionMessages.properties
	* IResumeAtLineTarget.java: new
	* ResumeAtLineActionDelegate.java
	* ResumeAtLineAdapter.java: new
	* RetargetAction.java: new
	* RetargetResumeAtLineAction.java: new
	* RetargettableActionAdapterFactory.java
	* CDebugUIPlugin.java
	* JumpToLineActionDelegate.java: removed
	* RunToLineActionDelegate.java: removed

2005-01-12 Mikhail Khodjaiants
	Bug 73168: Use memory view provided by Eclipse platform in CDT. 
	Removed the old memory view.
	* CDebugUIPreferenceInitializer.java
	* AutoRefreshMemoryAction.java: removed
	* ClearMemoryAction.java: removed
	* MemoryActionSelectionGroup.java: removed
	* MemoryFormatAction.java: removed
	* MemoryNumberOfColumnAction.java: removed
	* MemorySizeAction.java: removed
	* RefreshMemoryAction.java: removed
	* ShowAsciiAction.java: removed
	* ActionMessages.properties
	* PreferenceMessages.properties
	* MemoryViewPreferencePage.java: removed
	* ICDebugPreferenceConstants.java